--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
                     <h2>desenvolvedor Python e analista de sistemas</h2>
                     <p>Transformando problemas complexos em soluções digitais inovadoras</p>
                     <div class="hero-btns">
-                        <a href="#projetos" class="btn btn-primary">Meus Projetos</a>
-                        <a href="#contato" class="btn btn-secondary">Entre em Contato</a>
-                    </div>
+    <a href="#projetos" class="btn btn-primary">Meus Projetos</a>
+    <a href="#contato" class="btn btn-secondary">Entre em Contato</a>
+    <a href="assets/curriculo-arthur-renzo.pdf" download="Curriculo-Arthur-Renzo.pdf" class="btn btn-outline">
+        <i class="fas fa-download"></i> Download CV
+    </a>
+</div>
                 </div>
             </div>
             <div class="social-icons">
@@ -159,18 +162,18 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content right">
-                        <div class="date">2023 - Presente</div>
-                        <h4>Estagiário de Analista de Sistemas</h4>
-                        <p class="company">Secretaria de Saúde de São Bernardo do Campo</p>
-                        <p>Desenvolvimento de soluções tecnológicas para unidades de saúde, incluindo software de registro de chamados e automação de processos.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-content left">
                         <div class="date">2022 - Presente</div>
                         <h4>Graduação em Ciência da Computação</h4>
                         <p class="company">USCS - Universidade Municipal de São Caetano do Sul</p>
                         <p>6º semestre, com previsão de conclusão em Julho/2026. Foco em desenvolvimento de software e análise de sistemas.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content left">
+                        <div class="date">2024 - Presente</div>
+                        <h4>Estagiário de Analista de Sistemas</h4>
+                        <p class="company">Secretaria de Saúde de São Bernardo do Campo</p>
+                        <p>Desenvolvimento de soluções tecnológicas para unidades de saúde, incluindo software de registro de chamados e automação de processos com o n8n, exemplo app</p>
                     </div>
                 </div>
                 <div class="timeline-item">
