--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="hero-btns">
     <a href="#projetos" class="btn btn-primary">Meus Projetos</a>
     <a href="#contato" class="btn btn-secondary">Entre em Contato</a>
-    <a href="Currículo.pdf" download="Curriculo-Arthur-Renzo.pdf" class="btn btn-outline">
+    <a href="Currículo.pdf" download="Currículo.pdf" class="btn btn-outline">
         <i class="fas fa-download"></i> Download CV
     </a>
 </div>
